objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>CN_Approval_Status_Required__c</fullName>
        <label>Approval Status Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Approval_Type__c</fullName>
        <formula>IF(
 CN_Is_Applied_Promotion__c ,
  $Label.CN_Quote_Approve_Type_0,
 IF(
    UnitPrice &gt;=  CN_Channel_Price_VAT__c ,
    $Label.CN_Quote_Approve_Type_1,
    $Label.CN_Quote_Approve_Type_3
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Approve_Complete_Target__c</fullName>
        <label>Approve Complete Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Approve_Status__c</fullName>
        <formula>Quote.CN_Approved_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approve Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Approve_Type_Code__c</fullName>
        <formula>IF(
 CN_Is_Applied_Promotion__c ,
  0,
 IF( UnitPrice &gt;=  ROUND(CN_Channel_Price__c *( 1 + VALUE(LEFT(CN_Tax__c,LEN(CN_Tax__c)-1))/100),2),1,3)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approve Type Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Approver_Id_List__c</fullName>
        <label>Approver Id List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Approver_Required__c</fullName>
        <label>Approver Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Channel_Price_VAT__c</fullName>
        <label>Channel Price(VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Channel_Price__c</fullName>
        <label>ChannelPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Commets_for_Approver__c</fullName>
        <label>Comments for Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Condition_Table_API__c</fullName>
        <defaultValue>&quot;A005&quot;</defaultValue>
        <label>Condition Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Condition_Type_API__c</fullName>
        <defaultValue>&quot;RB00&quot;</defaultValue>
        <label>Condition Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Acceptance__c</fullName>
        <label>Customer Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Customer_Number_API__c</fullName>
        <formula>Quote.Opportunity.Account.CN_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Denied_Reason__c</fullName>
        <label>Denied Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Discount_Price__c</fullName>
        <label>Discount Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Discount__c</fullName>
        <formula>(PricebookEntry.UnitPrice -  UnitPrice ) / PricebookEntry.UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CN_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Finance_Acceptance__c</fullName>
        <label>Finance Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Finance_Status__c</fullName>
        <formula>if(  Quote.CN_Is_Finance_Notified__c &amp;&amp; ISPICKVAL(CN_Customer_Acceptance__c,&apos;Accepted&apos;) , 

   If (  ISPICKVAL(CN_Finance_Acceptance__c , &apos;Accepted&apos; )  , 
       if ( ISPICKVAL(CN_Sync_Status__c , &apos;Success&apos;), &apos;Completed&apos;,
             if ( ISPICKVAL(CN_Sync_Status__c , &apos;Failed&apos;), &apos;Sync Failed&apos;, &apos;In progress&apos; ) 
          ),

       if ( ISPICKVAL(CN_Finance_Acceptance__c , &apos;Denied&apos;), &apos;Denied&apos;, &apos;Waitting Finance confirm&apos; )
     
    ),
   &apos;&apos;
)</formula>
        <label>Finance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_From_Splited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CN From Splited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_IF_Flow_update_Sales_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To enable Flow(CN_Quote_Item_Populate_Price) to update sales price when create quote line item.</description>
        <label>IF Flow update Sales Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Applied_Promotion__c</fullName>
        <formula>NOT(ISBLANK(CN_Promotion_Member__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Applied Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Approval_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approval Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Line_Item_Synced__c</fullName>
        <formula>ISPICKVAL( CN_Sync_Status__c , &quot;Success&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Line Item Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Need_My_Approval__c</fullName>
        <formula>CONTAINS( CN_Approver_Id_List__c ,  $User.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Need My Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Quote_Approved__c</fullName>
        <formula>ISPICKVAL(Quote.Status, &quot;Approved&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Quote Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Latest_Ready_DateTime__c</fullName>
        <label>Latest Ready DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Latest_Reject_Approve_DateTime__c</fullName>
        <label>Latest Reject/Approve DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Line_Item_Number__c</fullName>
        <displayFormat>QI-{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CN_List_Price_VAT__c</fullName>
        <label>List Price(VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Material_Number_API__c</fullName>
        <formula>CN_Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Number API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Max_Discount_Price__c</fullName>
        <label>Max Discount Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Minimum_Price__c</fullName>
        <label>Minimum Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Origin_PDF__c</fullName>
        <label>Origin/原产国</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Origin__c</fullName>
        <formula>TEXT(Product2.CN_Origin__c)</formula>
        <label>Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Price_Before_Tax_PDF__c</fullName>
        <formula>UnitPrice / ( 1 + VALUE(LEFT(CN_Tax__c,LEN(CN_Tax__c)-1))/100)</formula>
        <label>With Out Tax/税前价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Price_PDF__c</fullName>
        <formula>&quot;CNY &quot; + TEXT(ROUND( UnitPrice ,2))</formula>
        <label>Pirce/销售价</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Pricing_Unit__c</fullName>
        <label>Pricing Unit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Product_Code__c</fullName>
        <formula>Product2.CN_SKU_Code__c</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product_Description_PDF__c</fullName>
        <formula>IF(
  LEN(CN_SKU_Description_CN__c)&lt;=16,
  CN_SKU_Description_CN__c,
  LEFT(CN_SKU_Description_CN__c,16) + BR() + MID(CN_SKU_Description_CN__c,17,LEN(CN_SKU_Description_CN__c)-16)
)
+ BR() +
IF(
  LEN(CN_SKU_Description_EN__c)&lt;=25,
  CN_SKU_Description_EN__c,
  IF(
    OR(CHR(25)==&apos; &apos;,CHR(26)==&apos; &apos;),
    LEFT(CN_SKU_Description_EN__c,25) + BR() + MID(CN_SKU_Description_EN__c,26,LEN(CN_SKU_Description_EN__c)-25),
    IF(
      Find(&apos; &apos;,CN_SKU_Description_EN__c,20)&lt;&gt;0,
      LEFT(CN_SKU_Description_EN__c,Find(&apos; &apos;,CN_SKU_Description_EN__c,20)) + BR() + MID(CN_SKU_Description_EN__c,Find(&apos; &apos;,CN_SKU_Description_EN__c,20)+1,LEN(CN_SKU_Description_EN__c)-Find(&apos; &apos;,CN_SKU_Description_EN__c,20)),
      IF(
        Find(&apos; &apos;,CN_SKU_Description_EN__c,15)&lt;&gt;0,
        LEFT(CN_SKU_Description_EN__c,Find(&apos; &apos;,CN_SKU_Description_EN__c,15)) + BR() + MID(CN_SKU_Description_EN__c,Find(&apos; &apos;,CN_SKU_Description_EN__c,15)+1,LEN(CN_SKU_Description_EN__c)-Find(&apos; &apos;,CN_SKU_Description_EN__c,15)),
        LEFT(CN_SKU_Description_EN__c,25) + BR() + MID(CN_SKU_Description_EN__c,26,LEN(CN_SKU_Description_EN__c)-25)
      )
    )
  ) 
)</formula>
        <label>Product Description/产品描述</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Promo_Price_P1__c</fullName>
        <label>Promo Price P1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Promo_Price_P2__c</fullName>
        <label>Promo Price P2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Promo_Price_P3__c</fullName>
        <label>Promo Price P3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Id__c</fullName>
        <formula>CN_Promotion_Member__r.CN_Promotion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Member</label>
        <referenceTo>CN_Promotion_Member__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Price__c</fullName>
        <label>Promotion Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_QTY_PER_CTN_PDF__c</fullName>
        <label>QTY PER CTN/箱规</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Qty_per_Carton__c</fullName>
        <formula>Product2.CN_Qty_per_Carton_PDF__c</formula>
        <label>Qty per Carton</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Quote_Status__c</fullName>
        <formula>TEXT(Quote.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Quote_Sync_Status__c</fullName>
        <formula>TEXT( Quote.CN_Sync_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Sync Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Rate_API__c</fullName>
        <formula>( UnitPrice /  ROUND((CN_List_Price__c*( 1 + VALUE(LEFT(CN_Tax__c,LEN(CN_Tax__c)-1))/100)) ,2)) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CN_Rate_Unit_API__c</fullName>
        <defaultValue>&quot;%&quot;</defaultValue>
        <label>Rate Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Description_CN__c</fullName>
        <formula>Product2.CN_SKU_Description_CN__c</formula>
        <label>Product Description(CN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Description_EN__c</fullName>
        <formula>Product2.CN_SKU_Description_EN__c</formula>
        <label>Product Description(EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Price_with_Tax__c</fullName>
        <description>Quote.UnitPrice has changed from price without tax to price with tax, so this field was discarded.</description>
        <formula>UnitPrice * ( 1 + VALUE(LEFT(CN_Tax__c,LEN(CN_Tax__c)-1))/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price(VAT)_Old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Selling_Unit_PDF__c</fullName>
        <formula>Text( CN_Pricing_Unit__c) &amp;&apos;-&apos;&amp; CN_Unit_of_Measure__c</formula>
        <label>UoM/单位</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Selling_Unit__c</fullName>
        <formula>Text(CN_Pricing_Unit__c) &amp;&apos;-&apos; &amp; CN_Unit_of_Measure__c &amp; &apos;   Tax:&apos; &amp;  CN_Tax__c</formula>
        <label>Sales Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Shelf_Life__c</fullName>
        <formula>Product2.CN_Shelf_Life__c</formula>
        <label>Shelf Life/保质期</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Error_Message__c</fullName>
        <label>Sync Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sync_Time__c</fullName>
        <label>Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Tax_Formula__c</fullName>
        <formula>IF(
  Quote.Opportunity.Account.CN_Tax_Classification__c == &apos;0&apos;,
  CASE( Product2.CN_Tax_Code__c , &apos;0&apos;, &apos;0&apos;, &apos;1&apos;, &apos;17&apos;,&apos;0&apos;),
  IF(
    Quote.Opportunity.Account.CN_Tax_Classification__c == &apos;1&apos;,
    CASE( Product2.CN_Tax_Code__c, &apos;0&apos;, &apos;0&apos;, &apos;1&apos;, &apos;13&apos;,&apos;2&apos;,&apos;13&apos;,&apos;5&apos;,&apos;9&apos;,&apos;13&apos;),
    &apos;0&apos;
  )
) &amp; &apos;%&apos;</formula>
        <label>Tax Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Tax_PDF__c</fullName>
        <formula>CN_Tax__c  &amp; &apos;VAT&apos;</formula>
        <label>Tax/税率</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Tax__c</fullName>
        <label>Tax</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Unit_of_Measure__c</fullName>
        <label>UoM</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Valid_From_API__c</fullName>
        <formula>TEXT(YEAR(Quote.CN_Effective_Date__c)) +   LPAD(TEXT(MONTH(Quote.CN_Effective_Date__c)), 2, &quot;0&quot;) +  LPAD(TEXT(DAY(Quote.CN_Effective_Date__c)), 2, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Valid_To_API__c</fullName>
        <formula>TEXT(YEAR(Quote.ExpirationDate)) + LPAD(TEXT(MONTH(Quote.ExpirationDate)), 2, &quot;0&quot;) + LPAD(TEXT(DAY(Quote.ExpirationDate)), 2, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid To</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_Prevent_Edit_After_Synced</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 CN_Is_Line_Item_Synced__c ,
ISCHANGED(CN_Customer_Acceptance__c ) ||  ISCHANGED(  CN_Finance_Acceptance__c )
)</errorConditionFormula>
        <errorMessage>It&apos;s not allowed to change Customer Acceptance or Finance Acceptance after synced to SAP.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_Approved</fullName>
        <active>false</active>
        <description>CN_Prevent_Edit_AfterQuoteApproved</description>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  OR(
    OR(
      ISCHANGED( UnitPrice ),
      ISCHANGED( Description ),
      ISCHANGED( Quantity )
    ),
    ISNEW()
  ),
  ISPICKVAL( Quote.Status , &quot;Approved&quot;),
  NOT(CN_From_Splited__c),
  NOT(ISCHANGED(CN_Sync_Status__c)),
  NOT(ISCHANGED(CN_Sync_Time__c)),
  NOT(ISCHANGED(CN_Sync_Error_Message__c))
)</errorConditionFormula>
        <errorMessage>Pls don&apos;t update or create the quote line item when the quote has been approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_Finance_Accept</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISBLANK(TEXT(CN_Customer_Acceptance__c )),
  ISCHANGED( CN_Finance_Acceptance__c ) 
)</errorConditionFormula>
        <errorDisplayField>CN_Finance_Acceptance__c</errorDisplayField>
        <errorMessage>It&apos;s not allowed to change Finance Acceptance until Customer Acceptance had been filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_Ready</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 CN_Quote_Status__c = &apos;Ready for Approval&apos; ,
NOT(ISCHANGED(CN_Latest_Ready_DateTime__c))
)</errorConditionFormula>
        <errorMessage>Please don&apos;t update or create the quote line item when the quote is ready for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_QLI_Check_Reject_Only_My_Approve</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 CN_Quote_Status__c = &apos;Submitted for Approval&apos;,
 ISCHANGED( CN_Approval_Status__c ),
 NOT(CN_Is_Need_My_Approval__c)
)</errorConditionFormula>
        <errorDisplayField>CN_Approval_Status__c</errorDisplayField>
        <errorMessage>You can only mark approval status for the Quote Line Item that required you to approve.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_QLI_Check_SalesPrice</fullName>
        <active>true</active>
        <errorConditionFormula>MOD(UnitPrice ,0.01) &gt; 0</errorConditionFormula>
        <errorMessage>Sales price can only have at most two decimal places</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_QLI_Check_Sales_Price</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
    NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
    if( CN_Is_Applied_Promotion__c, UnitPrice &lt;  CN_Promotion_Price__c , false )     

)</errorConditionFormula>
        <errorMessage>Sales Price must greater or equal than Promotion Price.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_QLI_Prevent_Edit_After_Notify_Fin</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
NOT(IF($Profile.Name = &quot;CN Finance MDM&quot;, TRUE, FALSE)),
  Quote.CN_Is_Finance_Notified__c ,
 ISCHANGED( CN_Customer_Acceptance__c )
)</errorConditionFormula>
        <errorDisplayField>CN_Customer_Acceptance__c</errorDisplayField>
        <errorMessage>It&apos;s not allowed to change Customer Acceptance after notified Finance MDM.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_QLI_Prevent_Edit_Apporval_Status</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 OR(
    CN_Quote_Status__c = &apos;Submitted for Approval&apos;,
    AND( PRIORVALUE(CN_Quote_Status__c ) = &apos;Submitted for Approval&apos;, CN_Quote_Status__c = &apos;Rejected&apos; )
 ),
 NOT(ISCHANGED( CN_Approval_Status__c ))
)</errorConditionFormula>
        <errorMessage>It&apos;s only allowed to change approval status in approval processing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_QLI_Prevent_Edit_Approve_Complete</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
NOT(ISNEW()),

CN_Is_Approval_Completed__c,
NOT(ISCHANGED(CN_Customer_Acceptance__c ) || ISCHANGED(CN_Finance_Acceptance__c)),
NOT(ISCHANGED(CN_Is_Approval_Completed__c))
)</errorConditionFormula>
        <errorMessage>It&apos;s not allowed to edit Quote Line Item after approve complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_QLI_Prevent_Edit_Customer_Accpt</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 CN_Quote_Status__c != &apos;Approved&apos;,
 ISCHANGED( CN_Customer_Acceptance__c )
)</errorConditionFormula>
        <errorDisplayField>CN_Customer_Acceptance__c</errorDisplayField>
        <errorMessage>Customer Acceptance could only be edit after Quote approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_QLI_Prevent_Edit_Except_Acceptance</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
NOT(ISNEW()),
 NOT(CN_Quote_Status__c != &apos;New&apos; || CN_Quote_Status__c != &apos;Rejected&apos;),
 NOT(ISCHANGED( CN_Approval_Status__c ) || ISCHANGED(CN_Customer_Acceptance__c ) || ISCHANGED(CN_Finance_Acceptance__c ))
)</errorConditionFormula>
        <errorMessage>It&apos;s not allowed to edit Quote Line Item when Quote is approving or approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_QLI_Prevent_Edit_Fin_Acceptance</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISCHANGED( CN_Finance_Acceptance__c ),
 ISPICKVAL( CN_Customer_Acceptance__c , &quot;Denied&quot;),
  ISPICKVAL( CN_Finance_Acceptance__c , &quot;Accepted&quot;)
)</errorConditionFormula>
        <errorDisplayField>CN_Finance_Acceptance__c</errorDisplayField>
        <errorMessage>It&apos;s not allowed to accept Quote Line Item which denied by customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_QLI_Prevent_Edit_Reject</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 CN_Quote_Status__c = &quot;Rejected&quot;,
 ISCHANGED( CN_Approval_Status__c )
)</errorConditionFormula>
        <errorMessage>It&apos;s not allow to change approve status when Quote is rejected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Quote_Item_Check_Sales_Price</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  UnitPrice &lt;&gt; CN_Channel_Price__c,
  ISBLANK(Quote.CN_Source_Quote__c ),
  ISNEW(),
  NOT(CN_IF_Flow_update_Sales_Price__c)
)</errorConditionFormula>
        <errorMessage>It&apos;s not allow to change sales price when add product to quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Quote_Prevent_Edit_Promotion_Member</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 CN_Quote_Status__c != &apos;New&apos;,
 ISCHANGED( CN_Promotion_Member__c ) || ISCHANGED( CN_Promotion_Price__c )
)</errorConditionFormula>
        <errorDisplayField>CN_Promotion_Member__c</errorDisplayField>
        <errorMessage>It&apos;s not allowed to apply or un-apply Promotion when Quote in approval process or approved.</errorMessage>
    </validationRules>
</CustomObject>